--- a/index.qmd
+++ b/index.qmd
@@ -1,29 +1,36 @@
 ---
-title: "Germán D. Orbegozo-Rodríguez"
+title: "Germán D. Orbegozo-Orbegozo"
+subtitle: "Harvard University"
+image: /files/img/profile.jpg
+toc: false
+about:
+  template: trestles
+  links:
+    - icon: github
+      text: Github
+      url: https://github.com/github
+    - icon: twitter
+      text: twitter
+      url: https://twitter.com/your_twitter_handlet
 ---
 
-This is a Quarto website. TEST TEST
+Lorem ipsum doslor sit amet, consectetur adipiscing elit. Integer fermentum, libero vitae consequat feugiat, lacus nisl accumsan nisi, nec posuere libero urna vel risus. Aen  ean euismod, justo non porta tincidunt, erat erat rutrum mi, vitae iaculis lorem sapien nec nisl. Sed nec nunc vitae nunc blandit placerat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec fermentum, lacus sed tristique dapibus, magna arcu scelerisque odio, non aliquam sapien magna ac ante. Nulla facilisi. Suspendisse potenti.
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+Praesent sollicitudin, erat non fermentum dapibus, sapien nulla euismod est, a ornare odio lacus sed magna. In vitae risus id purus ullamcorper cursus. Fusce ac elit vitae nibh convallis porttitor. Sed a fermentum justo. Phasellus tempor sem at nulla fermentum, vitae viverra ligula accumsan. Proin sit amet ante neque. Pellentesque id sapien vitae sapien ultrices vehicula non nec erat. Curabitur ut nibh sit amet magna dignissim blandit.
 
-```{r}
-
-
-1 + 1
-```
+Etiam vitae orci quam. Nam tincidunt blandit augue, in tincidunt odio porta sed. Duis convallis sagittis justo, vel viverra sapien laoreet vel. Ut ac sapien vel velit dignissim vulputate. Quisque fermentum est et nisl varius tempor. Suspendisse eget quam non justo euismod posuere. Aliquam erat volutpat.
 
 
-HWhat is Lorem Ipsum?
-Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+<hr class="section-divider">
 
-Why do we use it?
-It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+## Working Papers
 
+::: {.publication}
+**Otro Paper**  
+_with People from Colombia_ | [PDF](/content/pdf/rosetta_stone.pdf)
 
-Where does it come from?
-Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
-
-The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
-
-Where can I get some?
-There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc. :D
+<details>
+<summary>Abstract</summary>
+Etiam vitae orci quam. Nam tincidunt blandit augue, in tincidunt odio porta sed. Duis convallis sagittis justo, vel viverra sapien laoreet vel. Ut ac sapien vel velit dignissim vulputate. Quisque fermentum est et nisl varius tempor. Suspendisse eget quam non justo euismod posuere. Aliquam erat volutpat.
+</details>
+:::
