--- a/index.qmd
+++ b/index.qmd
@@ -14,23 +14,25 @@ about:
       url: https://x.com/germanorbegozo
 ---
 
-Lorem ipsum doslor sit amet, consectetur adipiscing elit. Integer fermentum, libero vitae consequat feugiat, lacus nisl accumsan nisi, nec posuere libero urna vel risus. Aen  ean euismod, justo non porta tincidunt, erat erat rutrum mi, vitae iaculis lorem sapien nec nisl. Sed nec nunc vitae nunc blandit placerat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec fermentum, lacus sed tristique dapibus, magna arcu scelerisque odio, non aliquam sapien magna ac ante. Nulla facilisi. Suspendisse potenti.
+Lorem ipsum doslor sit amet, consectetur adipiscing elit. Integer fermentum, libero vitae consequat feugiat, lacus nisl accumsan nisi, nec posuere libero urna vel risus. Aen ean euismod, justo non porta tincidunt, erat erat rutrum mi, vitae iaculis lorem sapien nec nisl. Sed nec nunc vitae nunc blandit placerat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec fermentum, lacus sed tristique dapibus, magna arcu scelerisque odio, non aliquam sapien magna ac ante. Nulla facilisi. Suspendisse potenti.
 
 Praesent sollicitudin, erat non fermentum dapibus, sapien nulla euismod est, a ornare odio lacus sed magna. In vitae risus id purus ullamcorper cursus. Fusce ac elit vitae nibh convallis porttitor. Sed a fermentum justo. Phasellus tempor sem at nulla fermentum, vitae viverra ligula accumsan. Proin sit amet ante neque. Pellentesque id sapien vitae sapien ultrices vehicula non nec erat. Curabitur ut nibh sit amet magna dignissim blandit.
 
 Etiam vitae orci quam. Nam tincidunt blandit augue, in tincidunt odio porta sed. Duis convallis sagittis justo, vel viverra sapien laoreet vel. Ut ac sapien vel velit dignissim vulputate. Quisque fermentum est et nisl varius tempor. Suspendisse eget quam non justo euismod posuere. Aliquam erat volutpat.
 
-
 <hr class="section-divider">
 
 ## Working Papers
 
-::: {.publication}
-**Otro Paper**  
-_with People from Colombia_ | [PDF](/content/pdf/rosetta_stone.pdf)
+::: publication
+**Otro Paper**\
+*with People from Colombia* \| [PDF](/content/pdf/rosetta_stone.pdf)
 
 <details>
+
 <summary>Abstract</summary>
+
 Etiam vitae orci quam. Nam tincidunt blandit augue, in tincidunt odio porta sed. Duis convallis sagittis justo, vel viverra sapien laoreet vel. Ut ac sapien vel velit dignissim vulputate. Quisque fermentum est et nisl varius tempor. Suspendisse eget quam non justo euismod posuere. Aliquam erat volutpat.
+
 </details>
 :::
