--- a/index.qmd
+++ b/index.qmd
@@ -6,9 +6,9 @@ toc: false
 about:
   template: trestles
   links:
-    - icon: github
-      text: Github
-      url: https://github.com/github
+    #- icon: github
+    #  text: Github
+    #  url: https://github.com/github
     - icon: twitter
       text: twitter
       url: https://x.com/germanorbegozo
