--- a/index.qmd
+++ b/index.qmd
@@ -14,23 +14,37 @@ about:
       url: https://x.com/germanorbegozo
 ---
 
-Hello! I am a Ph.D. student in Public Policy (Economics Track) at Harvard University. 
+Hello! 
+
+I am a third year Ph.D. student in Public Policy (Economics Track) at Harvard University. 
 
 I am interested in Political Economy, Behavioral and Development Economics.
 
 <hr class="section-divider">
 
-## Work in Progress 
+
+## Work in Progress
 
 ::: publication
-**Stigma and Vocational Education **\
-*with People from Colombia* \| [PDF](/content/pdf/rosetta_stone.pdf)
+
+### Stigma and Vocational Education  
+*with Santiago Pérez‑Cardona* | [PDF](/content/pdf/rosetta_stone.pdf)
 
 <details>
-
 <summary>Abstract</summary>
 
-Etiam vitae orci quam. Nam tincidunt blandit augue, in tincidunt odio porta sed. Duis convallis sagittis justo, vel viverra sapien laoreet vel. Ut ac sapien vel velit dignissim vulputate. Quisque fermentum est et nisl varius tempor. Suspendisse eget quam non justo euismod posuere. Aliquam erat volutpat.
+This paper studies students’ level‑of‑education choice—specifically, how they choose among technical, associate, and university programs within a tiered post‑secondary system. We combine administrative application data with a belief‑elicitation survey among Bogotá high‑school students. A structural model links choices to beliefs about returns, non‑monetary outcomes, and social status. We find that technical and associate degrees are systematically penalized, even when expected returns match those of university programs. A survey experiment shows that students update when presented with accurate returns, but stigma and social‑image concerns weaken responsiveness. Addressing these concerns is essential for expanding uptake of short‑cycle programs.
 
 </details>
+
+### Persuasion Failures, Social Image, and Identity  
+[PDF](/content/pdf/stigma_paper.pdf)
+
+<details>
+<summary>Abstract</summary>
+
+Why do advocates and activists often avoid arguments they know are more persuasive? In partnership with a vegan advocacy organization, this project shows that individuals frequently forgo effective messages because those arguments feel misaligned with their social group or personal identity. Activists select arguments for a real campaign under varying incentive, visibility, and identity‑prime conditions. Despite clear evidence on which messages work best, many avoid them when choices are public or when primed to reflect on core values. A follow‑up experiment with non‑vegans measures the persuasive impact of these choices. Results reveal how identity concerns distort communication and identify interventions that improve message selection and bridge ideological divides.
+
+</details>
+
 :::
